feat: add price history image

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,6 +8,9 @@ services:
     ports:
     - "50051:50051"
     - "9464:9464"
+  price-history:
+    ports:
+    - "50052:50052"
   redis:
     ports:
     - "6379:6379"
@@ -16,6 +19,9 @@ services:
     - MONGODB_ADVERTISED_HOSTNAME=127.0.0.1
     ports:
     - "27017:27017"
+  postgres-price-history:
+    ports:
+      - "5432:5432"
   bitcoind:
     ports:
       - "18443:18443"
