build: add price history migration/update

--- a/.env.ci
+++ b/.env.ci
@@ -31,6 +31,8 @@ REDIS_0_DNS=redis
 REDIS_0_SENTINEL_PORT=${REDIS_0_SENTINEL_PORT}
 PRICE_ADDRESS=price
 PRICE_PORT=${PRICE_PORT}
+PRICE_HISTORY_ADDRESS=price-history
+PRICE_HISTORY_PORT=${PRICE_HISTORY_PORT}
 LOCAL=${LOCAL}
 JWT_SECRET=${JWT_SECRET}
 GEETEST_ID=${GEETEST_ID}
