--- a/.envrc
+++ b/.envrc
@@ -75,6 +75,9 @@ export REDIS_0_SENTINEL_PORT=26379
 export PRICE_ADDRESS=${DOCKER_HOST_IP}
 export PRICE_PORT=50051
 
+export PRICE_HISTORY_ADDRESS=${DOCKER_HOST_IP}
+export PRICE_HISTORY_PORT=50052
+
 export LOCAL=docker-compose
 export JWT_SECRET="jwt_secret"
 
