--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     depends_on:
     - price
     - price-history
+    - price-history-migrate
     - redis
     - mongodb
     - postgres-price-history
@@ -26,6 +27,18 @@ services:
     image: us.gcr.io/galoy-org/price:edge
   price-history:
     image: galoy-price-history:latest
+    environment:
+      - DB_HOST=postgres-price-history
+      - DB_PORT=5432
+      - DB_USER=galoy-price-usr
+      - DB_PWD=galoy-price-pwd
+      - DB_DB=galoy-price-history
+      - DB_POOL_MIN=1
+      - DB_POOL_MAX=5
+      - DB_DEBUG=false
+    depends_on: [postgres-price-history]
+  price-history-migrate:
+    image: galoy-price-history-migrate:latest
     environment:
       - DB_HOST=postgres-price-history
       - DB_PORT=5432
